<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:title="@string/title" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_phone"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/toppingGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/topping1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping1" />

        <RadioButton
            android:id="@+id/topping2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping2" />

        <RadioButton
            android:id="@+id/topping3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping3" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/shapeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toppingGroup"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/shape1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shape1" />

        <RadioButton
            android:id="@+id/shape2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shape2" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shapeGroup"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type1" />

        <RadioButton
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type2" />

        <RadioButton
            android:id="@+id/type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type3" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderingText"
        android:layout_below="@+id/typeGroup"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:alpha="0.6"
        android:text="@string/ordering_text" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderingText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/exit_button"
            android:onClick="onExit"/>

        <Button
            android:id="@+id/smsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sms_button" />
    </LinearLayout>
</RelativeLayout>
